welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:17: error: 'while' expected but '}' found.
	}
        ^